--- a/gems/admin_suite/app/views/admin_suite/dashboard/index.html.erb
+++ b/gems/admin_suite/app/views/admin_suite/dashboard/index.html.erb
@@ -7,7 +7,7 @@
     <% navigation_items.sort_by { |(_k, v)| (v[:order] || 100).to_i }.each do |portal_key, portal| %>
       <div class="bg-white dark:bg-slate-800 rounded-xl border border-slate-200 dark:border-slate-700 p-4">
         <div class="flex items-center justify-between mb-3">
-          <div class="font-semibold text-slate-900 dark:text-white"><%= portal[:label] || portal_key.to_s.humanize %></div>
+          <%= link_to(portal[:label] || portal_key.to_s.humanize, portal_path(portal: portal_key), class: "font-semibold text-slate-900 dark:text-white hover:text-indigo-600 dark:hover:text-indigo-400") %>
           <div class="text-xs text-slate-500 dark:text-slate-400"><%= portal[:sections].values.sum { |s| s[:items].size } %> resources</div>
         </div>
 
